# backup_build

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LS_request.sh  LS_send.sh  README.md  cargo_build_errors.txt  convert_to_subvolume.sh  init_LS.sh  init_WS.sh  install_service.sh  ls_dev_latest_label.sh  ls_dev_plan_restore.sh  ls_dev_register_artifact.sh  migrate_manifest_to_v2.sh  prune_snapshots.py  pull_from_cloud.sh  push_to_cloud.sh  restore_backup_LS.sh  store_on_LS.sh  take-snapshot.service  take-snapshot.timer  take_snapshot.sh  test_convert_to_subvolume.sh  todo.txt  ws_dev_export_and_push.sh  ws_dev_run_month.sh  ws_dev_snapshot.sh
crates/dev-backup-btrfs/src/: lib.rs
crates/dev-backup-cli/: Cargo.toml
crates/dev-backup-cli/src/: main.rs
crates/dev-backup-cli/tests/: restore_plan.rs
crates/dev-backup-core/: Cargo.toml
crates/dev-backup-core/src/: config.rs  lib.rs  manifest.rs
crates/dev-backup-storage/: Cargo.toml
crates/dev-backup-storage/src/: artifact.rs  cloud.rs  crypto.rs  lib.rs
docs/: BUILD.md  config.example.toml
rust-rebuild/: Cargo.toml
rust-rebuild/crates/dev-backup-btrfs/: Cargo.toml
rust-rebuild/crates/dev-backup-cli/: Cargo.toml
rust-rebuild/crates/dev-backup-core/src/: policy.rs
rust-rebuild/docs/: config.example.toml
rust-rebuild/systemd/: dev-backup-monthly.service
systemd/: dev-backup-monthly.timer
