[workspace]
resolver = "2"
members = [
  "crates/dev-backup-cli",
  "crates/dev-backup-core",
  "crates/dev-backup-storage",
  "crates/dev-backup-btrfs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
