[package]
name = "dev-backup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
time.workspace = true

# Local crates
[dependencies.dev-backup-core]
path = "../dev-backup-core"

[dependencies.dev-backup-storage]
path = "../dev-backup-storage"

[dependencies.dev-backup-btrfs]
path = "../dev-backup-btrfs"
